<resources>
    <string name="app_name">Movie Database</string>

    <!-- Strings for the Sort By Menu -->
    <string name="ma_sort_by">Sort By</string>
    <string name="ma_start">Sort By</string>
    <string name="ma_sort_by_most_popular">Show Most Popular</string>
    <string name="ma_sort_by_highest_rated">Show Highest Rated</string>
    <string name="ma_sort_by_playing">Show Now Playing</string>
    <string name="ma_refresh">Refresh</string>
    <string name="ma_start_music">Start Music</string>
    <string name="ma_stop_music">Stop Music</string>

    <!-- Main Activity strings -->
    <string name="ma_error_message">Sorry, we were unable to fetch movie data form the Internet.\nCheck your connection or try again later.</string>

    <!-- Detail Activity strings -->
    <string name="da_rating_max">/10</string>

    <!-- Base URL to fetch the images from MovieDB.org -->
    <string name="moviedb_baseurl">https://image.tmdb.org/t/p/w500</string>

    <!-- Intent names to send/retrieve data from/to activities -->
    <string name="intent_title">Title</string>
    <string name="intent_poster">Poster</string>
    <string name="intent_plot">Plot</string>
    <string name="intent_voting">Vote</string>
    <string name="intent_release_date">Release Date</string>
    <string name="da_tools_plot">Movie database for sdu android programming</string>

</resources>
